--- a/bloom_nofos/bloom_nofos/static/theme-orientation-portrait.css
+++ b/bloom_nofos/bloom_nofos/static/theme-orientation-portrait.css
@@ -130,6 +130,11 @@ section.nofo--cover-page.nofo--cover-page--hero {
 
 /* Section title page */
 
+.section--title-page .section--title-page--header-nav > ol,
+.section--title-page .section--title-page--header-nav > p {
+  margin-left: -5mm;
+}
+
 .section--title-page--toc a {
   width: 50%;
 }
